process-demo-control-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: process-demo-control-ingress
spec:
  defaultBackend:
    service:
      name: process-demo-control
      port:
        number: 1880
